package eapli.ecourse.classmanagment.domain;

public enum ClassType {
    RECURRING_CLASS, EXTRA_CLASS
}
